# bible

./: .gitignore  README.md  com.github.dahenson.bible  com.github.dahenson.bible.in  com.github.draftheart.bible  meson.build  meson_post_install.py  setup.py
bible/: application.py  async.py  booklist.py  granitebooklist.py  installdialog.py  installmanager.py  library.py  meson.build  modulelist.py  modulelistbox.py  modulerow.py  moduleviewer.py  navbar.py  passageview.py  welcome.py  window.py
data/: com.github.dahenson.bible.appdata.xml  com.github.dahenson.bible.gschema.xml  com.github.draftheart.bible.appdata.xml  com.github.draftheart.bible.desktop  com.github.draftheart.bible.gschema.xml  meson.build
dist-packages/: Sword.py
